@@ -28,7 +28,7 @@ Description: Python 2 package depending on python3-foo (explicit)
 
 Package: python3-foo
 Architecture: all
-Depends: $\{misc:Depends\}, python3, python-foo, python2-foo, python2-bar, python3-falsepositive, python-foo-doc
+Depends: $\{misc:Depends\}, python3, python-foo, python2-foo, python2-bar, python3-falsepositive, python-foo-doc, python-foo-common
 Description: Python 3 package depending on python-foo and python2-foo
  This is a test package designed to exercise some feature or tag of
  Lintian.  It is part of the Lintian test suite and may do very odd
