@@ -13,6 +13,8 @@ lintian (2.5.67) UNRELEASED; urgency=medium
       that depend on Python {3,2} packages when the package being depended
       on ends with -doc. We were previously only catching the case for
       dependencies *from* packages with such names.  (Closes: #885693)
+    + [CL] Also ignore -common packages for intra-Python variant dependency
+      checking.
   * checks/watch-file.{desc,pm}:
     + [CL] Apply patch from Felix Lechner <felix.lechner@lease-up.com> to
       check for packages where an upstream signature exists but is not
